[package]
name = "youtube-dl-parser"
version = "0.1.0"
edition = "2021"
authors = ["hristo-gochev"]
description = "Runs youtube-dl and parses its download output."
license = "MIT"
documentation = "https://docs.rs/youtube-dl-parser/"
homepage = "https://github.com/hristo-gochev/youtube-dl-parser"
repository = "https://github.com/hristo-gochev/youtube-dl-parser"
readme = "README.md"
keywords = ["youtube-dl", "youtube", "parse", "download"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
duct = "0.13"