[package]
name = "youtube-dl-parser"
version = "0.2.0"
edition = "2021"
authors = ["hristogochev"]
description = "Runs youtube-dl and parses its download output."
license = "MIT"
documentation = "https://docs.rs/youtube-dl-parser/"
homepage = "https://github.com/hristogochev/youtube-dl-parser"
repository = "https://github.com/hristogochev/youtube-dl-parser"
readme = "README.md"
keywords = ["youtube-dl", "youtube", "parse", "download"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13"